--- a/_extract/jsons/langs/qps-ploc.json
+++ b/_extract/jsons/langs/qps-ploc.json
@@ -77,9 +77,7 @@
                 "error": "[!!! *Âñ èжçèƥƭïôñ ôççúřřèδ ωλïℓè ℓôáδïñϱ {i} ₥ôδúℓè.* !!!]",
                 "success": "[!!! *Rèïñïƭïáℓïƺïñϱ çô₥ƥℓèƭè.* !!!]"
             },
-            "indev_notif": "[!!! \n> **WÂRNÌNG! Tλè βôƭ ïƨ ôƥèřáƭïñϱ ïñ ÌNÐÉV ₥ôδè. Þℓèáƨè řèƒřáïñ ƒřô₥ úƨïñϱ ƭλïƨ ₥ôδè ïƒ ƭλèřè ářè ñô ƭèƨƭƨ řúññïñϱ.** !!!]",
-            "error_stop_noperms": "[!!! *Óñℓ¥ δèƲèℓôƥèř ïƨ áℓℓôωèδ ƭô ƨλúƭ δôωñ ƭλè βôƭ.* !!!]",
-            "error_reload_noperms": "[!!! *Óñℓ¥ δèƲèℓôƥèř ïƨ áℓℓôωèδ ƭô řèℓôáδ ƭλè βôƭ.* !!!]"
+            "indev_notif": "[!!! \n> **WÂRNÌNG! Tλè βôƭ ïƨ ôƥèřáƭïñϱ ïñ ÌNÐÉV ₥ôδè. Þℓèáƨè řèƒřáïñ ƒřô₥ úƨïñϱ ƭλïƨ ₥ôδè ïƒ ƭλèřè ářè ñô ƭèƨƭƨ řúññïñϱ.** !!!]"
         },
         "settings": {
             "list": {
@@ -128,7 +126,8 @@
             "guild_admins_only": "[!!! *Ýôú δôñ'ƭ λáƲè èñôúϱλ ƥèř₥ïƨƨïôñƨ ƭô úƨè ƭλïƨ çô₥₥áñδ.* !!!]",
             "missing_required_argument": "[!!! *Ýôú λáƲè ₥ïƨƨèδ á řè9úïřèδ ářϱú₥èñƭ. Çλèçƙ ƭλè çô₥₥áñδ úƨáϱè ƨ¥ñƭáж.* !!!]",
             "command_not_found": "[!!! *Tλè ƨƥèçïƒïèδ çô₥₥áñδ ñôƭ ƒôúñδ.* !!!]",
-            "forbidden": "[!!! *§ô₥èƭλïñϱ ωôñ'ƭ ℓèƭ ₥è δô ƭλïƨ, ƨôřř¥.* !!!]"
+            "forbidden": "[!!! *§ô₥èƭλïñϱ ωôñ'ƭ ℓèƭ ₥è δô ƭλïƨ, ƨôřř¥.* !!!]",
+            "not_owner": "[!!! *Óñℓ¥ βôƭ ôωñèř ïƨ áℓℓôωèδ ƭô δô ƭλáƭ.* !!!]"
         }
     },
     "cmds": {}
