--- a/_extract/jsons/langs/ru.json
+++ b/_extract/jsons/langs/ru.json
@@ -64,9 +64,7 @@
                 "error": "*Произошла ошибка реинициализации после загрузки модуля {i}.*",
                 "success": "*Реинициализация успешно завершена.*"
             },
-            "indev_notif": "\n> **ВНИМАНИЕ! Бот работает в режиме INDEV. Пожалуйста, избегайте использования этого режима, если не проводится никаких тестов.**",
-            "error_stop_noperms": "*Бот может быть остановлен только его владельцем.*",
-            "error_reload_noperms": "*Бот может быть реинициализирован только его владельцем.*"
+            "indev_notif": "\n> **ВНИМАНИЕ! Бот работает в режиме INDEV. Пожалуйста, избегайте использования этого режима, если не проводится никаких тестов.**"
         },
 
         "settings": {
@@ -117,7 +115,8 @@
             "guild_admins_only": "*У вас недостаточно прав для выполнения этой команды.*",
             "missing_required_argument": "*Вы пропустили обязательный аргумент. Проверьте правильность написания команды.*",
             "command_not_found": "*Указанная команда не найдена.*",
-            "forbidden": "*Что-то не даёт мне сделать это, извините.*"
+            "forbidden": "*Что-то не даёт мне сделать это, извините.*",
+            "not_owner": "*Это может сделать только владелец бота.*"
         }
     },
     "cmds": {}
