--- a/_extract/jsons/langs/qps-ploc.json
+++ b/_extract/jsons/langs/qps-ploc.json
@@ -127,7 +127,19 @@
             "missing_required_argument": "[!!! *Ýôú λáƲè ₥ïƨƨèδ á řè9úïřèδ ářϱú₥èñƭ. Çλèçƙ ƭλè çô₥₥áñδ úƨáϱè ƨ¥ñƭáж.* !!!]",
             "command_not_found": "[!!! *Tλè ƨƥèçïƒïèδ çô₥₥áñδ ñôƭ ƒôúñδ.* !!!]",
             "forbidden": "[!!! *§ô₥èƭλïñϱ ωôñ'ƭ ℓèƭ ₥è δô ƭλïƨ, ƨôřř¥.* !!!]",
-            "not_owner": "[!!! *Óñℓ¥ βôƭ ôωñèř ïƨ áℓℓôωèδ ƭô δô ƭλáƭ.* !!!]"
+            "not_owner": "[!!! *Óñℓ¥ βôƭ ôωñèř ïƨ áℓℓôωèδ ƭô δô ƭλáƭ.* !!!]",
+            "no_history_access": "[!!! *Tλè βôƭ çáññôƭ áççèƨƨ ƭλè ₥èƨƨáϱè λïƨƭôř¥ áñδ ƭλèřèƒôřè úñáβℓè ƭô çô₥ƥℓèƭè ƭλïƨ áçƭïôñ.* !!!]"
+        },
+        "privacy": {
+            "privacy": {
+                "title": "[!!! Âñáƨƭèℓℓôƨ Éñϱïñè Éжá₥ƥℓè ÞřïƲáç¥ Þôℓïç¥ !!!]",
+                "desc": "[!!! > __THÌ§ Ì§ Â Þ£ÂÇÉHÓ£ÐÉR VÉR§ÌÓN ÓF ÞRÌVÂÇÝ ÞÓ£ÌÇÝ, MÂKÉ ÝÓÛR ÇHÂNGÉ§ ßÉFÓRÉ Û§ÌNG ÌT__\n\nTλïƨ δôçú₥èñƭ (\"ÞřïƲáç¥ Þôℓïç¥\") ôñℓ¥ áƥƥℓïèƨ ƭô ƭλè ïñƨƭáñçè ôƒ ßôƭ Ná₥è λôƨƭèδ β¥ ƭλè βôƭ áççôúñƭ <@80351110224678912> (\"ßôƭ\"). Tλè úƨè ôƒ ƭλè ßôƭ ïñ á ƨèřƲèř (ϱúïℓδ) řè9úïřèƨ ƭλè ƥřôçèƨƨïñϱ áñδ/ôř ƨƭôřïñϱ ôƒ ƨô₥è ƨƥèçïƒïç úƨèř δáƭá (\"Ðáƭá\").\n*Tô úƨè ƭλè ßôƭ, ¥ôú ářè řè9úïřèδ ƭô áϱřèè ƭô ƭλè ƭèř₥ƨ ôƒ ÞřïƲáç¥ Þôℓïç¥. Ìƒ ¥ôú δèçℓïñè ƭλè₥, ƭλè ßôƭ ωïℓℓ ℓèáƲè ƭλè ƨèřƲèř áúƭô₥áƭïçáℓℓ¥.*\n\n**Þřôçèƨƨïñϱ ôƒ Ðáƭá:**\nßôƭ ƨƭářƭƨ ƥřôçèƨƨïñϱ ƭλè ϱúïℓδ ÌÐ áƨ ƨôôñ áƨ ïƭ ïƨ ïñƲïƭèδ ƭô á ƨèřƲèř. Ìƭ çáñ βè ƨλôωñ ïñ ƭλè δèƲèℓôƥèř çôñƨôℓè, ωλïçλ ïƨ çℓèářèδ èƲèř¥ ƭï₥è ƭλè ßôƭ ïƨ βèïñϱ ƭúřñèδ ôƒƒ.\nTλè ßôƭ ₥ïϱλƭ ℓôϱ ÌÐƨ ôƒ ƭλè úƨèřƨ ωλô ƭ¥ƥèδ áñ¥ Ʋáℓïδ çô₥₥áñδƨ ïñƭô áñ¥ çλáññèℓ, áççèƨƨïβℓè β¥ ƭλè ßôƭ, ƨèñƭ á δïřèçƭ ₥èƨƨáϱè ƭô ƭλè ßôƭ, ôř èжƥℓïçïƭℓ¥ ₥èñƭïôñèδ ƭλè ßôƭ ïñ áñ¥ çλáññèℓ.\nTλè ßôƭ ƥřôçèƨƨèƨ áñδ/ôř çáçλèƨ áℓ₥ôƨƭ áℓℓ ƭλè áççèƨƨïβℓè Ðáƭá ïñçℓúδïñϱ βúƭ ñôƭ ℓï₥ïƭèδ ƭô: ₥èƨƨáϱè ÌÐƨ, ₥èƨƨáϱè çôñƭèñƭ, ₥èƨƨáϱè áƭƭáçλ₥èñƭƨ, ₥è₥βèř ÌÐƨ, ₥è₥βèř úƨèřñá₥èƨ, ₥è₥βèř ƨèřƲèř ñïçƙñá₥èƨ, ₥è₥βèř áƲáƭář ÛR£ƨ, ₥è₥βèř çúƨƭô₥ ƨƭáƭúƨèƨ ωïƭλ ƭλè ƥúřƥôƨè ôƒ ôƥèřáƭïñϱ ƥřôƥèřℓ¥, áℓƭλôúϱλ ïƭ çáññôƭ βè áççèƨƨèδ β¥ ƭλè δèƲèℓôƥèř δïřèçƭℓ¥.\n\n**§ƭôřïñϱ ôƒ Ðáƭá:**\nTλè ßôƭ δôèƨ ñôƭ ƨƭôřè áñ¥ úƨèř Ðáƭá úñƭïℓ ƭλè ƥèřƨôñ ₥áñáϱïñϱ ƭλè ₥èñƭïôñèδ áççôúñƭ ϱřáñƭƨ ƥèř₥ïƨƨïôñ ƭô δô ƨô ƒôř řèáƨôñƨ ïñçℓúδïñϱ βúƭ ñôƭ ℓï₥ïƭèδ ƭô: áƭƭřïβúƭïôñ ƒôř λèℓƥ ïñ δèƲèℓôƥïñϱ/ƭřáñƨℓáƭïñϱ ƭλè ßôƭ.\nÂƒƭèř á ₥è₥βèř ωïƭλ ƭλè ƥèř₥ïƨƨïôñ ƭô Máñáϱè §èřƲèř áççèƥƭƨ ƭλè ƭèř₥ƨ ôƒ ÞřïƲáç¥ Þôℓïç¥, ƭλè ßôƭ ωřïƭèƨ ƭλè ϱúïℓδ ÌÐ ïñƭô ƭλè ℓôçáℓ δáƭáβáƨè ƭô ƨƭôřè ƭλè ƨèřƲèř çôñƒïϱúřáƭïôñ. Ìƭ áℓƨô ƨƭôřèƨ ƥřèƒèřèñçèƨ ïñçℓúδïñϱ βúƭ ñôƭ ℓï₥ïƭèδ ƭô: ƥřèƒïж, ℓáñϱúáϱè çôδè.\n\n**Âççèƨƨ ƭô Ðáƭá:**\nTλè ₥èñƭïôñèδ Ðáƭá ïƨ ƨƭôřèδ ôñ á ƥèřƨôñáℓ çô₥ƥúƭèř ôƒ ƭλè ßôƭ δèƲèℓôƥèř. Óñℓ¥ ƭλè¥ ářè áβℓè ƭô áççèƨƨ áñδ/ôř ₥ôδïƒ¥ ƭλè Ðáƭá áƭ áñ¥ ϱïƲèñ ƭï₥è.\n\n**Rè₥ôƲáℓ ôƒ Ðáƭá:**\nTλè ßôƭ ïƨ áβℓè ƭô δèℓèƭè ƭλè ƨèřƲèř ƥřèƒèřèñçèƨ áℓôñϱƨïδè ωïƭλ ïƭƨ ÌÐ ƒřô₥ ƭλè δáƭáβáƨè β¥ úƨïñϱ ƭλè ôƥƭïôñ \"£èáƲè áñδ ƒôřϱèƭ\", ƥřôƲïδèδ β¥ úƨïñϱ ƭλè çô₥₥áñδ `áè!ℓèáƲè`.\nÌñ çáƨè ïƒ ¥ôú ωáñƭ ƭô řè₥ôƲè áℓℓ ¥ôúř úƨèř ïñƒôř₥áƭïôñ (çôñƨïδèřïñϱ ¥ôú ϱáƲè ¥ôúř ƥèř₥ïƨƨïôñ ƭô ƨƭôřè ïƭ βèƒôřè), ¥ôú çáñ řè9úèƨƭ ƭλè řè₥ôƲáℓ ₥áñúáℓℓ¥ β¥ çôñƭáçƭïñϱ ƭλè ßôƭ δèƲèℓôƥèř ïñ ƭλè δïřèçƭ ₥èƨƨáϱèƨ ôř ïñ ƭλè ƨúƥƥôřƭ ƨèřƲèř.\n\n> Tλè δèƲèℓôƥèř řèƨèřƲèƨ ƭλè řïϱλƭ ƭô ₥ôδïƒ¥ ƭλïƨ δôçú₥èñƭ áƭ áñ¥ ϱïƲèñ ƭï₥è, ωïƭλ ôř ωïƭλôúƭ ñôƭïçïñϱ ƭλè úƨèřƨ.\n\n*Tλïƨ δôçú₥èñƭ ïƨ áƲáïℓáβℓè ïñ ƒôℓℓôωïñϱ ℓáñϱúáϱèƨ: `èñ`, `9ƥƨ-ƥℓôç`.* !!!]",
+                "footer": "[!!! ÐèƲèℓôƥèř: {creator} | £áƨƭ úƥδáƭèδ: !!!]",
+                "timestamp": 1618953630,
+                "_url": "https://example.com/",
+                "agree": "[!!! Âϱřèè !!!]",
+                "decline": "[!!! Ðèçℓïñè !!!]"
+            }
         }
     },
     "cmds": {}
