--- a/_extract/jsons/langs/ru.json
+++ b/_extract/jsons/langs/ru.json
@@ -2,9 +2,26 @@
     "__meta__": {
         "lang_name": "Russian",
         "lang_name_native": "Русский",
-        "aliases": ["ru", "rus", "russian", "ру", "рус", "русский"],
-        "yes": ["включить", "вкл", "да", "д"],
-        "no": ["выключить", "выкл", "нет", "н"]
+        "aliases": [
+            "ru",
+            "rus",
+            "russian",
+            "ру",
+            "рус",
+            "русский"
+        ],
+        "yes": [
+            "включить",
+            "вкл",
+            "да",
+            "д"
+        ],
+        "no": [
+            "выключить",
+            "выкл",
+            "нет",
+            "н"
+        ]
     },
     "anastellos": {
         "info": {
@@ -48,11 +65,89 @@
                     },
                     "leave": {
                         "desc": "Удалить бота из сервера с опциональной очисткой конфигурации. Эту команду могут выполнять только администраторы."
+                    },
+                    "responses": {
+                        "desc": "Включает или отключает реакцию бота на сообщения-триггеры.",
+                        "args": {
+                            "toggle": "вкл|выкл"
+                        }
+                    },
+                    "set_log": {
+                        "desc": "Устанавливает аудит-канал для записи действий на сервере. Пустой аргумент отключает данную функцию.",
+                        "args": {
+                            "channel": "#канал"
+                        }
+                    },
+                    "report": {
+                        "desc": "Используется для отката нежелательного вмешательства в игровой процесс."
+                    },
+                    "roll": {
+                        "desc": "Данная команда выведет случайное число от 1 до указанного.",
+                        "args": {
+                            "max": "максимальное число"
+                        }
+                    },
+                    "try": {
+                        "desc": "Возвращает случайный исход: удача или провал в совершении какого-то действия. *При добавлении аргумента `debug` будет отображены отладочные данные.*",
+                        "args": {
+                            "chance": "шанс успеха в %",
+                            "show_debug_info": "debug"
+                        }
+                    },
+                    "try3": {
+                        "desc": "Возвращает случайный исход: положительный, нейтральный или отрицательный. *При добавлении аргумента `debug` будет отображены отладочные данные.*",
+                        "args": {
+                            "show_debug_info": "debug"
+                        }
+                    },
+                    "travel": {
+                        "desc": "Создаёт пару сообщений, сигнализирующих о переходе персонажа(ей) в другую локацию.",
+                        "args": {
+                            "channel": "канал",
+                            "characters": "имена персонажей через запятую"
+                        }
+                    },
+                    "start_relay": {
+                        "desc": "Начинает \"звонок\" в указанный канал. Все сообщения (кроме команд) из данного канала начнут транслироваться в указанный.",
+                        "args": {
+                            "contact": "название контакта"
+                        }
+                    },
+                    "stop_relay": {
+                        "desc": "Завершает \"звонок\". Сообщения перестанут передаваться в другой канал."
+                    },
+                    "add_contact": {
+                        "desc": "Добавить данный канал в список контактов под указанным именем. Пользователю требуется разрешение на управление сервером и вебхуками в канале.",
+                        "args": {
+                            "name": "название контакта"
+                        }
+                    },
+                    "remove_contact": {
+                        "desc": "Убрать канал из контактов."
+                    },
+                    "purge": {
+                        "desc": "Открыть мастер чистки сервера. Вам и боту нужны права на управление сообщениями."
+                    },
+                    "changelog": {
+                        "desc": "Посмотреть информацию об обновлениях бота.",
+                        "args": {
+                            "filter": "фильтр"
+                        }
+                    },
+                    "create_button": {
+                        "desc": "Создать сообщение с кнопками для ролей в данном канале с помощью мастера. Вам и боту нужно разрешение на управление ролями."
+                    },
+                    "create_reaction": {
+                        "desc": "Добавить реакцию-роль на указанное сообщение. Вам и боту нужно разрешение на управление ролями.",
+                        "args": {
+                            "msg": "ID сообщения",
+                            "emoji": "эмодзи",
+                            "role": "роль"
+                        }
                     }
                 }
             }
         },
-
         "technical": {
             "stop": "*Останавливаю бота...*",
             "shutdown": {
@@ -66,14 +161,15 @@
             },
             "indev_notif": "\n> **ВНИМАНИЕ! Бот работает в режиме INDEV. Пожалуйста, избегайте использования этого режима, если не проводится никаких тестов.**"
         },
-
         "settings": {
             "list": {
                 "title": "Настройки сервера",
                 "prefix": "Префикс",
                 "lang": "Язык",
                 "enabled": "**включено**",
-                "disabled": "**выключено**"
+                "disabled": "**выключено**",
+                "enabled_responses": "Триггеры",
+                "telemetry": "Канал-аудит"
             },
             "prefix": {
                 "title": "Префикс успешно изменён",
@@ -103,9 +199,19 @@
                         "desc": "Бот остаётся на сервере. Мы вас не подведём."
                     }
                 }
+            },
+            "resps": {
+                "title": "Ответы на триггеры",
+                "desc_on": "Теперь бот будет отвечать на сообщения-триггеры.",
+                "desc_off": "Бот больше не будет отвечать на сообщения-триггеры."
+            },
+            "telemetry": {
+                "title": "Канал-аудит",
+                "desc_on": "Действия будут записываться в {channel}.",
+                "desc_off": "Действия больше не будут записываться.",
+                "error_desc": "Нет доступа к вебхукам. Пожалуйста, проверьте права бота."
             }
         },
-
         "global_errors": {
             "max_concurrency": "*Команда уже находится в процессе выполнения максимальное количество раз.*",
             "channel_not_found": "*Кажется, указанного канала не существует на этом сервере.*",
@@ -116,8 +222,10 @@
             "missing_required_argument": "*Вы пропустили обязательный аргумент. Проверьте правильность написания команды.*",
             "command_not_found": "*Указанная команда не найдена.*",
             "forbidden": "*Что-то не даёт мне сделать это, извините.*",
-            "not_owner": "*Это может сделать только владелец бота.*"
-        }
+            "not_owner": "*Это может сделать только владелец бота.*",
+            "no_history_access": "*Бот не имеет доступа к истории сообщений в канале и поэтому не может выполнить это действие.*"
+        },
+        "privacy": {}
     },
     "cmds": {}
 }
