--- a/_dist/jsons/langs/qps-ploc.json
+++ b/_dist/jsons/langs/qps-ploc.json
@@ -38,6 +38,12 @@
                     "help": {
                         "desc": "[!!! Þřïñƭƨ ƭλïƨ ₥èƨƨáϱè. !!!]"
                     },
+                    "privacy": {
+                        "desc": "[!!! §λôω ƭλè ÞřïƲáç¥ Þôℓïç¥ δôçú₥èñƭ. !!!]",
+                        "args": {
+                            "lang": "[!!! ℓáñϱúáϱè !!!]"
+                        }
+                    },
                     "about": {
                         "desc": "[!!! Þřïñƭƨ ƭλè ïñƒô áβôúƭ ƭλè βôƭ. !!!]"
                     },
