--- a/_dist/jsons/langs/qps-ploc.json
+++ b/_dist/jsons/langs/qps-ploc.json
@@ -24,7 +24,7 @@
         "info": {
             "about": {
                 "desc": "[!!! [ßôƭ δèƨçřïƥƭïôñ]\n\n> *Ûƨè `{prefix}λèℓƥ` ƭô ϱèƭ ƭλè ïñƒôř₥áƭïôñ áβôúƭ ₥ôƨƭ çô₥₥áñδƨ.* !!!]",
-                "indev": "[!!! \n\nTλè βôƭ ïƨ ôƥèřáƭïñϱ ïñ ÌNÐÉV ₥ôδè ƭλáƭ ₥èáñƨ ƨô₥è βúϱƨ ₥á¥ áƥƥèář. Wè řèçô₥₥èñδ ¥ôú ƭô řèƒřáïñ ƒřô₥ úƨïñϱ ïƭ úñƭïℓ ƭλè ₥áïñƭáïñáñçè ïƨ çô₥ƥℓèƭè. !!!]",
+                "indev": "[!!! \n\nTλè βôƭ ïƨ ôƥèřáƭïñϱ ïñ ÐÉSSÛG ₥ôδè ƭλáƭ ₥èáñƨ ƨô₥è βúϱƨ ₥á¥ áƥƥèář. Wè řèçô₥₥èñδ ¥ôú ƭô řèƒřáïñ ƒřô₥ úƨïñϱ ïƭ úñƭïℓ ƭλè ₥áïñƭáïñáñçè ïƨ çô₥ƥℓèƭè. !!!]",
                 "anastellos": "[!!! Þôωèřèδ β¥ Âñáƨƭèℓℓôƨ Éñϱïñè !!!]",
                 "creator": "[!!! <> ωïƭλ ❤ β¥ {creator} !!!]"
             },
@@ -76,14 +76,14 @@
             "stop": "[!!! *§ƭôƥƥïñϱ ƭλè βôƭ...* !!!]",
             "shutdown": {
                 "msg": "[!!! *§ƭôƥƥïñϱ ƭλè βôƭ áñδ ƨλúƭƭïñϱ δôωñ ƭλè λôƨƭ...* !!!]",
-                "error_indev": "[!!! *Tλè βôƭ ïƨ ôƥèřáƭïñϱ ïñ ÌNÐÉV ₥ôδè. Hôƨƭ ƨλúƭδôωñ ïƨ úñáƲáïℓáβℓè.* !!!]"
+                "error_indev": "[!!! *Tλè βôƭ ïƨ ôƥèřáƭïñϱ ïñ ÐÉSSÛG ₥ôδè. Hôƨƭ ƨλúƭδôωñ ïƨ úñáƲáïℓáβℓè.* !!!]"
             },
             "reload": {
                 "start": "[!!! *Rèïñïƭïáℓïƺïñϱ ƨƭářƭèδ...* !!!]",
                 "error": "[!!! *Âñ èжçèƥƭïôñ ôççúřřèδ ωλïℓè ℓôáδïñϱ {i} ₥ôδúℓè.* !!!]",
                 "success": "[!!! *Rèïñïƭïáℓïƺïñϱ çô₥ƥℓèƭè.* !!!]"
             },
-            "indev_notif": "[!!! \n> **WÂRNÌNG! Tλè βôƭ ïƨ ôƥèřáƭïñϱ ïñ ÌNÐÉV ₥ôδè. Þℓèáƨè řèƒřáïñ ƒřô₥ úƨïñϱ ƭλïƨ ₥ôδè ïƒ ƭλèřè ářè ñô ƭèƨƭƨ řúññïñϱ.** !!!]"
+            "indev_notif": "[!!! \n> **WÂRNÌNG! Tλè βôƭ ïƨ ôƥèřáƭïñϱ ïñ ÐÉSSÛG ₥ôδè. Þℓèáƨè řèƒřáïñ ƒřô₥ úƨïñϱ ƭλïƨ ₥ôδè ïƒ ƭλèřè ářè ñô ƭèƨƭƨ řúññïñϱ.** !!!]"
         },
         "settings": {
             "list": {
