--- a/_dist/jsons/langs/ru.json
+++ b/_dist/jsons/langs/ru.json
@@ -27,7 +27,7 @@
         "info": {
             "about": {
                 "desc": "[Описание бота]\n\n> *Чтобы получить информацию обо всех доступных командах - введите `{prefix}help`.*",
-                "indev": "\n\nВ данный момент бот работает в режиме INDEV, что означает его текущую нестабильность. Рекомендуется воздержаться от использования бота до завершения работ и его перевода в нормальный режим.",
+                "indev": "\n\nВ данный момент бот работает в режиме DEBUG, что означает его текущую нестабильность. Рекомендуется воздержаться от использования бота до завершения работ и его перевода в нормальный режим.",
                 "anastellos": "Работает на базе Anastellos Engine",
                 "creator": "<> {creator} с ❤"
             },
@@ -73,14 +73,14 @@
             "stop": "*Останавливаю бота...*",
             "shutdown": {
                 "msg": "*Останавливаю бота и выключаю компьютер...*",
-                "error_indev": "*Бот запущен в режиме INDEV. Выключение компьютера недоступно.*"
+                "error_indev": "*Бот запущен в режиме DEBUG. Выключение компьютера недоступно.*"
             },
             "reload": {
                 "start": "*Начинаю реинициализацию...*",
                 "error": "*Произошла ошибка реинициализации после загрузки модуля {i}.*",
                 "success": "*Реинициализация успешно завершена.*"
             },
-            "indev_notif": "\n> **ВНИМАНИЕ! Бот работает в режиме INDEV. Пожалуйста, избегайте использования этого режима, если не проводится никаких тестов.**"
+            "indev_notif": "\n> **ВНИМАНИЕ! Бот работает в режиме DEBUG. Пожалуйста, избегайте использования этого режима, если не проводится никаких тестов.**"
         },
         "settings": {
             "list": {
