--- a/_dist/jsons/langs/ru.json
+++ b/_dist/jsons/langs/ru.json
@@ -80,7 +80,18 @@
                 "error": "*Произошла ошибка реинициализации после загрузки модуля {i}.*",
                 "success": "*Реинициализация успешно завершена.*"
             },
-            "indev_notif": "\n> **ВНИМАНИЕ! Бот работает в режиме DEBUG. Пожалуйста, избегайте использования этого режима, если не проводится никаких тестов.**"
+            "indev_notif": "\n> **ВНИМАНИЕ! Бот работает в режиме DEBUG. Пожалуйста, избегайте использования этого режима, если не проводится никаких тестов.**",
+            "host_info": {
+                "title": "Информация о хосте",
+                "memory": "{used} из {total} ГБ ({used_percent}%)",
+                "day": "день",
+                "days": "дней",
+                "os": "Операционная система",
+                "mem": "Использование ОЗУ",
+                "python_ver": "Версия интерпретатора Python",
+                "nextcord_ver": "Версия библиотеки Nextcord",
+                "bot_uptime": "Время работы бота"
+            }
         },
         "settings": {
             "list": {
@@ -88,9 +99,7 @@
                 "prefix": "Префикс",
                 "lang": "Язык",
                 "enabled": "**включено**",
-                "disabled": "**выключено**",
-                "enabled_responses": "Триггеры",
-                "telemetry": "Канал-аудит"
+                "disabled": "**выключено**"
             },
             "prefix": {
                 "title": "Префикс успешно изменён",
