--- a/_dist/jsons/langs/ru.json
+++ b/_dist/jsons/langs/ru.json
@@ -99,7 +99,11 @@
                 "prefix": "Префикс",
                 "lang": "Язык",
                 "enabled": "**включено**",
-                "disabled": "**выключено**"
+                "disabled": "**выключено**",
+                "enabled_responses": "Триггеры",
+                "telemetry": "Канал-аудит",
+                "verbose_random": "Подробные результаты рандома",
+                "multilevel": "*сложная структура*"
             },
             "prefix": {
                 "title": "Префикс успешно изменён",
